Allow tests to perform even if we are offline. Humm, a test that _should_ run offline requires apple.com?